# labs

./: CMakeLists.txt  vovaExam.cpp
dataStructures/: binarySearchTree.cpp  binaryTree.cpp  dynamicQueue.cpp  dynamicStack.cpp  hashTable.cpp  linkedList.cpp  maxHeap.cpp  stack.cpp  staticQueue.cpp  staticStack.cpp
semester1/: IsNumPalindrome.cpp  drochna.cpp  matrixMaxElement.cpp  numAgeToString.cpp  numSumOfSides.cpp  quadraticEquation.cpp  triangle.cpp
semester1/homework/: longMath.cpp  triangle.cpp
semester1/lab1/: main.cpp
semester1/lab2/: main.cpp
semester1/lab2_But_I_Am_Drunk/: main.cpp
semester1/lab3/: main.cpp
semester2/: test1.cpp
semester2/exam/: graphAdjacencyStructure.cpp
semester2/exam/mishaSosiHui/: binarySearchTree.cpp  binaryTree.cpp  circularLinkedList.cpp  compressedLinkedList.cpp  doublyLinkedList.cpp  graphAdjacencyStructure.cpp  queue.cpp  stack.cpp
semester2/exam/variant_10/: main.cpp
semester2/exam/variant_2/: main.cpp
semester2/exam/variant_22/: main.cpp
semester2/exam/variant_32/: main.cpp
semester2/exam/variant_46/: main.cpp
semester2/exam/variant_47/: main.cpp
semester2/exam/variant_48/: main.cpp
semester2/exam/variant_52/: main.cpp
semester2/exam/variant_6/: main.cpp
semester2/exam/variant_72/: main.cpp
semester2/ivanovModule1/: task1.cpp  task2.cpp  task3.cpp
semester2/lab1/: main.cpp
semester2/lab1_1/: main.cpp
semester2/lab2/: main.cpp
semester2/lab2_1/: main.cpp
semester2/lab3/: task1.cpp  task2.cpp
semester2/lab4/: main.cpp
semester3/kirushaLab1/: main.cpp
semester3/kirushaLab1/array/deque/: array_deque.cpp  array_deque.h
semester3/kirushaLab1/array/queue/: array_queue.cpp  array_queue.h
semester3/kirushaLab1/array/stack/: array_stack.cpp  array_stack.h
semester3/kirushaLab1/linkedList/deque/: linkedList_deque.cpp  linkedList_deque.h
semester3/kirushaLab1/linkedList/queue/: linkedList_queue.cpp  linkedList_queue.h
semester3/kirushaLab1/linkedList/stack/: linkedList_stack.cpp  linkedList_stack.h
semester3/lab1/: main.cpp
sortAlgorithms/: bubbleSort.cpp  insertionSort.cpp  selectionSort.cpp
