cmake_minimum_required(VERSION 3.26)

project(labs)

set(CMAKE_CXX_STANDARD 17)

add_executable(quadraticEquation
        semester1/quadraticEquation.cpp)

add_executable(triangle
        semester1/triangle.cpp)

add_executable(numSumOfSides
        semester1/numSumOfSides.cpp)

add_executable(IsNumPalindrome
        semester1/IsNumPalindrome.cpp)