cmake_minimum_required(VERSION 3.26)

project(labs)

set(CMAKE_CXX_STANDARD 17)

add_executable(quadraticEquation
        semester1/homework/quadraticEquation.cpp)

add_executable(triangle
        semester1/homework/triangle.cpp)

add_executable(numSumOfSides
        semester1/homework/numSumOfSides.cpp)

add_executable(IsNumPalindrome
        semester1/homework/IsNumPalindrome.cpp)

add_executable(longMath
        semester1/homework/longMath.cpp)


add_executable(lab1
        semester1/lab1/main.cpp)

add_executable(lab2
        semester1/lab2/main.cpp)
