cmake_minimum_required(VERSION 3.26)

project(labs)

set(CMAKE_CXX_STANDARD 17)

add_executable(quadraticEquation
        semester1/homework/quadraticEquation.cpp)

add_executable(triangle
        semester1/homework/triangle.cpp)

add_executable(numSumOfSides
        semester1/homework/numSumOfSides.cpp)

add_executable(IsNumPalindrome
        semester1/homework/IsNumPalindrome.cpp)

add_executable(longMath
        semester1/homework/longMath.cpp)


add_executable(lab1
        semester1/lab1/main.cpp)

add_executable(lab2
        semester1/lab2/main.cpp)

add_executable(lab3
        semester1/lab3/main.cpp)

add_executable(lab2_But_I_Am_Drunk
        semester1/lab2_But_I_Am_Drunk/main.cpp)

add_executable(matrixMaxElement
        semester1/matrixMaxElement.cpp)

add_executable(numAgeToString
        semester1/numAgeToString.cpp)

add_executable(drochna
        semester1/drochna.cpp)

add_executable(vovaExam
        vovaExam.cpp)

add_executable(linkedList
        dataStructures/linkedList.cpp)
add_executable(staticStack
        dataStructures/staticStack.cpp)
add_executable(staticQueue
        dataStructures/staticQueue.cpp)
add_executable(hashTable
        dataStructures/hashTable.cpp)
add_executable(binaryTree
        dataStructures/binarySearchTree.cpp)
add_executable(maxHeap
        dataStructures/maxHeap.cpp)
add_executable(stack
        dataStructures/dynamicStack.cpp)
add_executable(queue
        dataStructures/dynamicQueue.cpp)
add_executable(bubbleSort sortAlgorithms/bubbleSort.cpp)
add_executable(selectionSort sortAlgorithms/selectionSort.cpp)
add_executable(insertionSort sortAlgorithms/insertionSort.cpp)

add_executable(lab2_1
        semester2/lab1/main.cpp)

add_executable(lab2_1_1
        semester2/lab1_1/main.cpp)
add_executable(lab2_2
        semester2/lab2/main.cpp)

add_executable(lab2_2_1
        semester2/lab2_1/main.cpp)

add_executable(lab2_3_1
        semester2/lab3/task1.cpp)

add_executable(lab2_3_2
        semester2/lab3/task2.cpp)

add_executable(iv_task1 semester2/ivanovModule1/task1.cpp)
add_executable(iv_task2 semester2/ivanovModule1/task2.cpp)
add_executable(iv_task3 semester2/ivanovModule1/task3.cpp)
add_executable(test1 semester2/test1.cpp)

add_executable(lab2_4 semester2/lab4/main.cpp)
add_executable(exam_2_variant_2 semester2/exam/variant_2/main.cpp)
